# API_docs_generator

./: .gitignore  README.md  pyproject.toml  requirements.txt
.streamlit/: config.toml
app/: doc_gen.py  inputs.py  latex.py  main.py  utils.py
