[tool.poetry]
name = "api-docs-generator"
version = "0.1.0"
description = ""
authors = ["yoptohlejepeta <peta.kotlan@seznam.cz>"]
license = "MIT"
readme = "README.md"
packages = [{include = "api_docs_generator"}]

[tool.poetry.dependencies]
python = "^3.10"
streamlit = "^1.31.1"
pylatex = "^1.4.2"
ipykernel = "^6.29.2"
pydantic = "^2.6.1"
reportlab = "^4.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
